Tasks are stored in localStorage

--- a/task-management-app/index.html
+++ b/task-management-app/index.html
@@ -7,7 +7,7 @@
   <body class="container">
     <header class="header">
     </header>
-    <dialog id="dialog">
+    <dialog id="taskForm">
       <form>
         <label>Title:</label>
         <input type="text" id="title" maxlength="10" pattern="[a-zA-Z0-9]+"/>
@@ -18,7 +18,7 @@
         <button id="confirmButton" type="button">Confirm</button>
       </form>
     </dialog>
-    <button id="addButton">Add a task</button>
+    <button id="openFormButton">Add a task</button>
     <div id="toDoSection"></div>
     <div id="inProgressSection"></div>
     <div id="doneSection"></div>
